tdf#154212 SwNavigator: Fix outline up/down handling

Fixes incorrect move outline up results and crashes related to
headings in frames being placed in order of document appearance in
the Navigator content tree, commit
c81f4a4ecbfa7dc97d8c28b5ec5f00d1d561b6bb.

It appears a significant amount of the existing code for handling
outline up/down movement isn't needed.

Change-Id: I9701b6d74dfa06f526f206fc2d250c4183ce4b2d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149944
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>